# keyboardwarrior

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: build_web.sh  pack_demo_song.py
songs/: README.md
src/: audio.rs  chart.rs  chorus.rs  config.rs  controls.rs  decode.rs  gfx.rs  main.rs  play.rs  practice.rs  settings.rs  sng.rs  theme.rs  web.rs  words.rs
web/: index.html  kw_audio.js  mq_js_bundle.js
