[package]
name = "keyboardwarrior"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
midly = "0.5"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "vorbis", "wav", "pcm", "flac"] }

# Native-only: cpal drives the mixer (the browser demo pulls it from JS
# instead), and libopus is a C library that doesn't build for wasm — the
# demo song ships vorbis stems.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
ogg = "0.9"
opus = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
